--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.128.0",
+    "pytelegrambotapi>=4.30.0",
     "sqlalchemy>=2.0.45",
-    "telebot>=0.0.5",
 ]
