--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "alembic>=1.18.1",
     "asyncpg>=0.31.0",
     "dotenv>=0.9.9",
     "fastapi>=0.128.0",
