--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "asyncpg>=0.31.0",
     "dotenv>=0.9.9",
     "fastapi>=0.128.0",
+    "psycopg2>=2.9.11",
     "psycopg[binary]>=3.3.2",
     "pytelegrambotapi>=4.30.0",
     "sqlalchemy>=2.0.45",
